# aifand

./: .gitignore  .mcp.json  .safety-project.ini  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: main-ci.yml  pr-ci.yml
doc/: architecture.md  hwmon.md  plan.md  todo.md
src/aifand/: __init__.py  daemon.py  main.py
src/aifand/base/: __init__.py  buffer.py  collection.py  device.py  entity.py  permissions.py  pipeline.py  process.py  runner.py  state.py  stateful.py  system.py
src/aifand/controllers/: __init__.py  fixed.py  learning.py  pid.py  safety.py
src/aifand/environments/: __init__.py  hardware.py  simulation.py
src/aifand/protocols/: __init__.py
src/aifand/protocols/dashboard/: __init__.py  server.py  templates.py
src/aifand/protocols/grpc/: __init__.py  client.py  server.py
src/aifand/protocols/http/: __init__.py  client.py  server.py
src/aifand/protocols/mqtt/: __init__.py  publisher.py  subscriber.py
src/aifand/protocols/prometheus/: __init__.py  exporter.py  metrics.py
tests/: __init__.py  conftest.py
tests/hardware/: __init__.py
tests/integration/: __init__.py
tests/simulation/: __init__.py
tests/unit/: __init__.py
tests/unit/base/: __init__.py  mocks.py  test_buffer.py  test_collection.py  test_device.py  test_entity.py  test_entity_hardware.py  test_integration.py  test_permissions.py  test_pipeline.py  test_process.py  test_process_timing.py  test_queue_stress.py  test_runner.py  test_state.py  test_stateful.py  test_system.py  test_three_method_pattern.py  test_timing_stress.py
tests/unit/controllers/: __init__.py  test_fixed.py
tests/unit/environments/: __init__.py
tests/unit/system/: __init__.py
