[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aifand"
version = "0.1.0"
description = "Adaptive thermal management system using Echo State Networks, PID controllers, and safety overrides"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "John Byrd", email = "johnwbyrd@gmail.com"}
]
maintainers = [
    {name = "John Byrd", email = "johnwbyrd@gmail.com"}
]
keywords = ["thermal-management", "control-systems", "echo-state-networks", "pid-controller", "hardware-monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring"
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "safety>=3.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "hatch>=1.7.0"
]

[project.urls]
Homepage = "https://github.com/johnwbyrd/aifand"
Repository = "https://github.com/johnwbyrd/aifand.git"
Issues = "https://github.com/johnwbyrd/aifand/issues"

[project.scripts]
aifand = "aifand.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=aifand --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.hatch.envs.default.scripts]
check = [
  "ruff format --check .",
  "ruff check .",
  "mypy src/",
  "pytest tests/ -v --cov=src/aifand --cov-report=term-missing",
  "bandit -r src/",
  "safety scan || pip-audit",
]
