[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aifand"
version = "0.1.0"
description = "Adaptive thermal management system using Echo State Networks, PID controllers, and safety overrides"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "John Byrd", email = "johnwbyrd@gmail.com"}
]
maintainers = [
    {name = "John Byrd", email = "johnwbyrd@gmail.com"}
]
keywords = ["thermal-management", "control-systems", "echo-state-networks", "pid-controller", "hardware-monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring"
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "safety>=3.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "hatch>=1.7.0"
]

[project.urls]
Homepage = "https://github.com/johnwbyrd/aifand"
Repository = "https://github.com/johnwbyrd/aifand.git"
Issues = "https://github.com/johnwbyrd/aifand/issues"

[project.scripts]
aifand = "aifand.main:main"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # we depend on the Any type to pass arbitrary key/value collections
    # to pydantic objects
    "ANN401",
    # trailing commas are ugly
    "COM812",
    # we need imports inside functions to avoid circular dependencies
    "PLC0415"
    ] 

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    # testing requires the use of magic values
    "PLR2004",
    # pytest depends upon assert
    "S101",
    # private member access is required for testing only
    "SLF001"
    ]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=aifand --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.hatch.envs.default]
extra-dependencies = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
  "safety>=3.0.0",
  "bandit>=1.7.0",
  "pip-audit>=2.6.0",
]

[tool.hatch.envs.default.scripts]
tests = [
  "ruff format --check .",
  "ruff check .",
  "mypy src/",
  "pytest tests/ -v --cov=src/aifand --cov-report=term-missing",
  "bandit -r src/",
  "safety scan || pip-audit",
]

[[tool.uv.index]]
name = "safety"
url = "https://pkgs.safetycli.com/repository/none-76b14/project/aifand/pypi/simple/"
default = false
